0.5.0
fix: some non-'Saving world' screens not rendering
adds: new option Render 'Saving World' Screen
some code restructuring (moved waiting for worlds to FastQuit.wait(...) and some smaller stuff